--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "cabac"
 version = "0.1.0"
 edition = "2021"
 
+description = "Context-adaptive binary arithmetic coding library"
+readme = "README.md"
+repository = "https://github.com/mcroomp/cabac"
+license = "LGPL-3.0-or-later"
+exclude = [ "tests/*" ]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
