--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cabac"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 description = "Context-adaptive binary arithmetic coding library"
@@ -10,6 +10,9 @@ license = "LGPL-3.0-or-later"
 exclude = [ "tests/*" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+debug=true
 
 [dependencies]
 byteorder = "1.4.3"
